--- a/package/win32/doclib/hsp3dish_ndk.htm
+++ b/package/win32/doclib/hsp3dish_ndk.htm
@@ -57,7 +57,6 @@
 	<br>
 	HSP3Dishでのビルドを支援するための、HSP3Dish Helperツールが同梱されています。
 	これにより、比較的スムーズにandroid向けにビルドを行なうことが可能になります。
-	<a href="hsp3dish_eclipse.html">統合開発環境Eclipse</a>上でお使い頂くことも可能ですが、手順が多いためHSP3Dish Helperの利用を推奨しています。
 	</p>
 
 	<p>
@@ -83,7 +82,7 @@
 	</p></ul>
 	<li>Android NDK（Native Development Kit）開発環境 → <a href="https://developer.android.com/ndk/downloads/index.html" target="_blank">[ダウンロードサイト]</a>
 	<ul><p>
-	最新版のWindows版zipアーカイブを任意のフォルダに解凍してください。推奨フォルダは、「c:\android\android-ndk～」です。<br>	(動作確認済みのバージョンは、r12b,r14です。r10よりも古いバージョンには対応していません)<br>
+	最新版のWindows版zipアーカイブを任意のフォルダに解凍してください。推奨フォルダは、「c:\android\android-ndk～」です。<br>	(動作確認済みのバージョンは、r12b,r14,r17cです。r10よりも古いバージョンには対応していません)<br>
 
 	※64bit環境の方は64bit版をご使用ください。SDK Toolsが32bit環境用の場合のみ、32bit版を推奨します。
 	</p></ul>
@@ -128,9 +127,9 @@
 	<p>
 	このツールにより、必要なAPIをインストールすることができます。(ネットに接続されている必要があります)
 	<br>
-	「Android 4.4.2 (API 19)」のような形で、それぞれのバージョンに対応したAPIのチェックボックスが表示されます。
-	この中で、「Android SDK Tools」「Android SDK Platform-tools」「Android SDK Build-tools」(最新のRev.)「Android 5.0.1 (API 21)」はチェックを入れて必ずインストールするようにしてください。
-	 (「Android 5.0.1 (API 21)」はプログラムで使用できるAPIのレベルを示すもので、インストールする端末のバージョンとは関係ありません。通常は、「Android 5.0.1 (API 21)」をインストールすればすべての端末で動作させることができます。)
+	「Android 7.0 (API 24)」のような形で、それぞれのバージョンに対応したAPIのチェックボックスが表示されます。
+	この中で、「Android SDK Tools」「Android SDK Platform-tools」「Android SDK Build-tools」(最新のRev.)「Android 7.0 (API 24)」はチェックを入れて必ずインストールするようにしてください。
+	 (APIバージョンはプログラムで使用できるAPIのレベルを示すもので、インストールする端末のバージョンとは関係ありません。通常は、「Android 7.0 (API 24)」をインストールすればほとんどの端末で動作させることができます。)
 	<br>
 	「Install packages...」のボタンを押すことで、ダウンロードとインストールが行なわれます。
 	インストールされた項目は、「Installed」の表示が付加されます。
@@ -174,10 +173,16 @@
 	AdMobによる広告配信アプリを作成する場合にチェックを入れてください。
 	Google Play Services及びAndroid Support Libraryが必要となります。詳しくは、「AdMobによる広告配信」を参照してください。
 	</p>
-	<li>ARM7最適化を無効</li><br><p>
-	チェックを入れることでARM7に最適化されたコードの生成を無効にします。
-	通常は、チェックを入れない状態(ARMv7コードに最適化)で使用してください。最適化を行なうことで、実行速度が向上します。
-	ARMv7を持たない古いAndroid端末で実行させる場合には、チェックを入れることで古いARMでも実行できるコードが生成されます。
+	<li>ARM64をビルドしない</li><br><p>
+	チェックを入れることで64bit向けARMプロセッサのコードの生成を無効にします。
+	通常は、チェックを入れない状態(ARM64ビルド有効)で使用してください。
+	64bitでない古いAndroid端末で実行させる場合には、チェックを入れることでビルド時間を短縮することが可能です。
+	</p>
+	<li>x86をビルドしない</li><br><p>
+	チェックを入れることでx86向けプロセッサのコードの生成を無効にします。
+	通常は、チェックを入れない状態(x86ビルド有効)で使用してください。
+	androidシミュレーター及びx86プロセッサを搭載したandroid端末で動作させる場合は、x86ビルドを有効にしてください。
+	そうでない場合は、チェックを入れることでビルド時間を短縮することが可能です。
 	</p>
 	<li>HGIMG4を使用する</li><br><p>
 	HGIMG4向けに作られたスクリプトを使用する場合にチェックを入れてください。
@@ -196,9 +201,9 @@
 	ライブラリフォルダとして作成されるものは、以下の通りです。
 	</p>
 	<ul>
-	<li>hsplib35～フォルダ</li><br><p>
+	<li>hsplib36～フォルダ</li><br><p>
 	HSP3Dishのビルドに必要なランタイムのソースが含まれています。
-	古いライブラリとの競合を防ぐため、「hsplib35b3」のようにHSPのバージョンごとに異なるフォルダ名が使用されます。
+	古いライブラリとの競合を防ぐため、「hsplib36b1」のようにHSPのバージョンごとに異なるフォルダ名が使用されます。
 	</p>
 	<li>gameplayフォルダ</li><br><p>
 	HGIMG4のビルドに必要なgameplayランタイムのソースが含まれています。
@@ -211,7 +216,7 @@
 	HSP3Dish Helper(hsp3dh.exe)を起動して、「オプション」タブの「ライブラリ更新」ボタンを押すことで、プロジェクトフォルダの内容が最新に上書きされます。HSPのアップデートや差し替えを行なった場合に行なっておいてください。
 	</p>
 	<p>
-	hsplib35～フォルダ内のソースには、各プロジェクトから共有されるHSP3Dishランタイムのソースが含まれます。
+	hsplib36～フォルダ内のソースには、各プロジェクトから共有されるHSP3Dishランタイムのソースが含まれます。
 	ユーザーが独自にソースを変更することもできますが、HSP3Dish helperのアップデート等でソースが上書き更新されてしまうことがありますので、注意してください。
 	</p>
 
@@ -283,8 +288,7 @@
 	</p><ul>
 
 
-	<li><a href="http://www.atmarkit.co.jp/ait/articles/1602/19/news044.html" target="_blank">「開発者向けオプション」をオンにする [@IT]</a>
-	<li><a href="http://www.adakoda.com/android/000242.html" target="_blank">実機でデバッグするには [逆引きAndroid入門]</a>
+	<li><a href="http://www.atmarkit.co.jp/ait/articles/1602/19/news044.html" target="_blank">「開発者向けオプション」をオンにする [@IT]</a></li>
 	</ul><p>
 	実機への転送ができない場合でも、ビルドで生成されたapkファイルをネットやUSBメモリを経由して転送してインストールを行ない実行の確認をすることも可能です。
 	<br>
@@ -296,6 +300,8 @@
 	スクリプトから参照されるデータファイルは2通りの方法で用意することができます。
 	1つは、プロジェクトディレクトリ内のassetsフォルダにファイルをコピーするというものです。基本的には、こちらの方法を使用してください。
 	assetsフォルダには、画像ファイルを始めとして読み込みに使用するファイルをすべて入れておくことができます。<br>
+	ただし、Windowsとは異なりファイル名の大文字・小文字が区別されますので正しくファイル名を記述する必要がありますのでご注意ください。
+<br><br>
 	もう1つの方法は、「データファイル(dpm)」の項目で設定されているデータフォルダ(data.dpmを生成します)にファイルをコピーして使用する方法です。
 	人に見られたくないデータや暗号化を使用したい人は、data.dpmのデータフォルダを使用するようにしてください。
 	ただし、サウンドファイル(wav,mp3など)は認識されないので注意してください。
@@ -491,7 +497,13 @@
 
 	<h2 id="HGIMG4">HGIMG4プロジェクトについて</h2>
 	<p>
-	HSP3.5β3からHGIMG4スクリプトのビルドに対応しています。基本的には、Windows版と同様の仕様で使用できます。<br>
+	基本的には、Windows版と同様の仕様でHGIMG4スクリプトを使用できます。<br>
+	</p>
+	<ul><img src="hsp3dish/pronama3d.png"><br>
+	暮井 慧（プロ生ちゃん） (C) Pronama LLC
+	</ul>
+	<br>
+	<p>
 	HGIMG4プロジェクトは、初回のビルドに非常に時間がかかります。
 	また、OpenGL/ES2の機能を使用するためandroid端末の環境や機種によっては、動作しなかったり、遅くなることがあります。<br>
 	HGIMG4では、起動時に必ずresフォルダ及びシェーダー等のファイルが必要になります。
@@ -546,8 +558,6 @@
 	<ul>
 	<li>従来のAdMobからの更新について</li><br>
 	<p>
-	※HSP3Dish 3.4版までは、従来の(古い)AdMobライブラリを使用していましたが、
-	Googleの更新により、2014/8/1以降は、古いAdMobライブラリを使用したアプリの更新、及び新規追加はできなくなっています。(既に登録されているアプリに影響はありません。)<br>
 	HSP3Dish 3.5版では、Google Firebaseを使用した新しいAdMobライブラリに切り替えているので、この制限はありません。
 	古いAdMobライブラリを使用するプロジェクトを更新する場合は、新規でプロジェクトを作成し直してください。
 	</p>
@@ -749,14 +759,10 @@
 	</p>
 	<li>画像サイズについて</li>
 	<p>
-	celload、picload命令などで読み込まれる画像の縦・横サイズが、2048を越えるものについては、正しく扱えない機種もあるので、推奨されません。
-	縦・横のサイズが2^nのサイズ、つまり1,2,4,8,16,32,64,128,256,512,1024でない画像を
-	読み込む時には、内部で変換を行なうため多少のオーバーヘッドが発生します。
+	縦・横のサイズが2^nのサイズ、つまり1,2,4,8,16,32,64,128,256,512,1024…でない画像を読み込む時には、内部で変換を行なうため多少のオーバーヘッドが発生します。
 	(通常はそれほど気にする必要はありません。大量の画像を読み込む場合にCPUリソースが余計に必要となります)
 	<br>
 	画像ファイルはプロジェクトディレクトリ内のassetsフォルダに入れることができます。
-	ただし、古い端末などではリソースのサイズ・個数に制限がある場合があります。
-	1つのファイルが4MBを越えるような大きなファイルを多数使用する場合は、data.dpmに含めて使用することを推奨します。
 	</p>
 	<li>再生可能なサウンドファイルについて</li>
 	<p>
