hsp3dhの更新 シンプルなzipファイルの圧縮解凍をサポートするzipfile.asを追加
Former-commit-id: 2a59519ee96c5687510e2df6131c7d46f7064dc0

--- a/package/win32/doclib/hsp3dish_js.htm
+++ b/package/win32/doclib/hsp3dish_js.htm
@@ -14,7 +14,7 @@
 <body>
 	<div id="CONTAINER">
 	<!-- ヘッダー -->
-	<p id="COPY">HSP : HSP3Dish / onion software 2017(c)</p>
+	<p id="COPY">HSP : HSP3Dish / onion software 2019(c)</p>
 	<img src="hsp3dish.jpg" width="640" height="200" alt="タイトル">
 	<h1>hsp3dish.js (WebGL/JavaScript版)<br><br>プログラミングガイド</h1>
 
@@ -86,8 +86,10 @@
 	生成される画面サイズは、ソーススクリプトと同一フォルダにあるhsp3dish.iniファイルの設定が使用されます。hsp3dish.iniファイルの設定については、<a href="hsp3dish_prog.htm#INIFILE">「起動設定ファイルについて」</a>の項目を参照してください。
 	</p>
 	<li>データフォルダ</li><br><p>
-	スクリプトから参照されるデータが格納されているフォルダを指定します。これは、picload命令やbload命令など、スクリプト中で読み込まれるファイル(画像データ、サウンドデータなども含む)を準備するためのものです。<br>
-	データフォルダが指定されると、その中にあるファイルをすべてデータファイル(.dataの拡張子)としてパックします。不要なファイルが含まれていると、無駄に容量を消費してしまうので、必ず必要なファイルだけを置くようにしてください。<br>
+	データフォルダは、picload命令やbload命令など、スクリプト中で読み込まれるファイル(画像データ、サウンドデータなども含む)を準備するためのものです。<br>
+	「ソーススクリプト」で指定したフォルダ以下の「data」フォルダをデータフォルダとして認識します。
+	スクリプトから読み込まれるファイルは、データフォルダにまとめて格納しておいてください。<br>
+	データフォルダが内にあるファイルをすべてデータファイル(.dataの拡張子)としてパックされます。不要なファイルが含まれていると、無駄に容量を消費してしまうので、必ず必要なファイルだけを置くようにしてください。<br>
 	データフォルダに含まれるファイルは、必ず<b>「半角英数のみのファイル名(日本語(全角)を使わない)」</b>ように注意してください。また、指定されたデータフォルダのみが検索対象となり、サブフォルダは含まれません。
 	データファイルが必要なし場合は、空欄にしておいて構いません。
 	</p>
@@ -99,7 +101,7 @@
 	</p>
 	<li>HGIMG4を使用する</li><br><p>
 	HGIMG4のスクリプトを変換します。実行時には「hsp3dish-gp.js」が必要になります。<br>
-	HGIMG4が使用するデータは、「データフォルダ」で指定したフォルダ内の「res」「res/shaders」に配置しておいてください。(sample/hgimg4内にあります)
+	HGIMG4が使用するデータは、「ソーススクリプト」で指定したフォルダ以下の「res」「res/shaders」に配置しておいてください。(sample/hgimg4内にあります)
 	<br><b>※現在のバージョンでは、ポストエフェクトなどで使用するオフスクリーン描画命令を使用することができませんので、注意してください。</b>
 	</p>
 	</ul>
