ドキュメントの更新 zipfile.asのヘルプを追加 HGIMG4マニュアルをhtmlに変更
Former-commit-id: ff770fb37e6d2b06df4c7e6dca175086c9c7fdb2

--- a/package/win32/doclib/pronama.htm
+++ b/package/win32/doclib/pronama.htm
@@ -9,13 +9,13 @@
 	<meta name="keywords" content="HSP3,HotSoupProcessor3,HSPTV,プログラミング生放送,プロ生ちゃん,暮井慧">
 	<meta name="description" content="HSPTVに関する情報を掲載">
 	<link href="../main.css" rel="stylesheet" type="text/css" media="all">
-	<title>HSP3.51 プロ生ちゃん素材</title>
+	<title>プロ生ちゃんコラボ素材</title>
 </head>
 <body>
 	<div id="CONTAINER">
 		<!-- ヘッダー -->
-		<p id="COPY">HSP : Hot Soup Processor ver3.51 / onion software 1997-2018(c)</p>
-		<h1>HSP3.51プロ生ちゃんプロ生ちゃん素材</h1>
+		<p id="COPY">HSP : Hot Soup Processor ver3.6 / onion software 1997-2019(c)</p>
+		<h1>プロ生ちゃんプロ生ちゃんコラボ素材</h1>
 
 		<h2 id="ABOUT">はじめに</h2>
 		<p>
