--- a/package/win32/hsp3dish.htm
+++ b/package/win32/hsp3dish.htm
@@ -1,37 +1,41 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html lang="ja">
 <head>
-	<meta http-equiv="Content-Type" content="text/html; charset=Shift_JIS">
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<meta http-equiv="Content-Language" content="ja">
 	<meta http-equiv="Content-Style-Type" content="text/css">
 	<meta http-equiv="Content-Script-Type" content="text/javascript">
-	<meta name="author" content="OpenHSP3 Projectihttp://dev.onionsoft.net/trac/wikij">
+	<meta name="author" content="OpenHSP3 Projectï¼ˆhttp://dev.onionsoft.net/trac/wikiï¼‰">
 	<meta name="keywords" content="HSP3,HotSoupProcessor3,HSP3Dish">
-	<meta name="description" content="HSP3Dish‚ÉŠÖ‚·‚éƒhƒLƒ…ƒƒ“ƒg">
+	<meta name="description" content="HSP3Dishã«é–¢ã™ã‚‹ãƒ‰ã‚­ãƒ¥ãƒ¡ãƒ³ãƒˆ">
 	<link href="main.css" rel="stylesheet" type="text/css" media="all">
 	<title>HSP3Dish Manual Index</title>
 </head>
 <body>
 	<div id="CONTAINER">
-		<!-- ƒwƒbƒ_[ -->
-		<p id="COPY">HSP : HSP3Dish / onion software 2017(c)</p>
-		<img src="doclib/hsp3dish.jpg" width="640" height="200" alt="ƒ^ƒCƒgƒ‹">
-		<h1>HSP3Dishƒ}ƒjƒ…ƒAƒ‹ƒCƒ“ƒfƒbƒNƒX</h1>
+		<!-- ãƒ˜ãƒƒãƒ€ãƒ¼ -->
+		<p id="COPY">HSP : HSP3Dish / onion software 2019(c)</p>
+		<img src="doclib/hsp3dish.jpg" width="640" height="200" alt="ã‚¿ã‚¤ãƒˆãƒ«">
+		<h1>HSP3Dishãƒãƒ‹ãƒ¥ã‚¢ãƒ«ã‚¤ãƒ³ãƒ‡ãƒƒã‚¯ã‚¹</h1>
 		
-		<!-- –{•¶ -->
+		<!-- æœ¬æ–‡ -->
 		<ul>
-			<li><a href="doclib/hsp3dish_prog.htm">ƒvƒƒOƒ‰ƒ~ƒ“ƒOƒ}ƒjƒ…ƒAƒ‹EŠî–{d—lƒKƒCƒhihsp3dish_prog.htmj</a></li>
-			<li><a href="doclib/hsp3dish_js.htm">WebGL/JavaScript”Å(hsp3dish.js)ƒvƒƒOƒ‰ƒ~ƒ“ƒOƒKƒCƒhihsp3dish_js.htmj</a></li>
-			<li><a href="doclib/hsp3dish_ios.htm">iOS”ÅƒvƒƒOƒ‰ƒ~ƒ“ƒOƒKƒCƒhihsp3dish_ios.htmj</a></li>
-			<li><a href="doclib/hsp3dish_ndk.htm">android(NDK)”ÅƒvƒƒOƒ‰ƒ~ƒ“ƒOƒKƒCƒhihsp3dish_ndk.htmj</a></li>
-			<li><a href="doclib/hsp3cnv.txt">HSP3ƒ\[ƒXƒRƒ“ƒo[ƒ^[Eƒ}ƒjƒ…ƒAƒ‹ihsp3cnv.txtj</a></li>
+			<li><a href="doclib/hsp3dish_prog.htm">ãƒ—ãƒ­ã‚°ãƒ©ãƒŸãƒ³ã‚°ãƒãƒ‹ãƒ¥ã‚¢ãƒ«ãƒ»åŸºæœ¬ä»•æ§˜ã‚¬ã‚¤ãƒ‰ï¼ˆhsp3dish_prog.htmï¼‰</a></li>
+			<li><a href="doclib/hgimg4.html">HGIMG4ãƒ—ãƒ­ã‚°ãƒ©ãƒŸãƒ³ã‚°ã‚¬ã‚¤ãƒ‰ï¼ˆhgimg4.htmlï¼‰</a></li>
+			<ul>
+				<li><a href="doclib/hgimg4_unity.html">HGIMG4 Unityé€£æºã‚¬ã‚¤ãƒ‰ï¼ˆhgimg4_unity.htmlï¼‰</a></li>
+			</ul>
+			<li><a href="doclib/hsp3dish_js.htm">WebGL/JavaScriptç‰ˆ(hsp3dish.js)ãƒ—ãƒ­ã‚°ãƒ©ãƒŸãƒ³ã‚°ã‚¬ã‚¤ãƒ‰ï¼ˆhsp3dish_js.htmï¼‰</a></li>
+			<li><a href="doclib/hsp3dish_ios.htm">iOSç‰ˆãƒ—ãƒ­ã‚°ãƒ©ãƒŸãƒ³ã‚°ã‚¬ã‚¤ãƒ‰ï¼ˆhsp3dish_ios.htmï¼‰</a></li>
+			<li><a href="doclib/hsp3dish_ndk.htm">android(NDK)ç‰ˆãƒ—ãƒ­ã‚°ãƒ©ãƒŸãƒ³ã‚°ã‚¬ã‚¤ãƒ‰ï¼ˆhsp3dish_ndk.htmï¼‰</a></li>
+			<li><a href="doclib/hsp3cnv.txt">HSP3ã‚½ãƒ¼ã‚¹ã‚³ãƒ³ãƒãƒ¼ã‚¿ãƒ¼ãƒ»ãƒãƒ‹ãƒ¥ã‚¢ãƒ«ï¼ˆhsp3cnv.txtï¼‰</a></li>
 		</ul>
 
 
 
-		<!-- ƒtƒbƒ^[ -->
+		<!-- ãƒ•ãƒƒã‚¿ãƒ¼ -->
 		<ul id="FOOTER">
-			<li><a href="#CONTAINER">‚±‚Ìƒy[ƒW‚Ì1”Ôã‚É–ß‚é</a></li>
+			<li><a href="#CONTAINER">ã“ã®ãƒšãƒ¼ã‚¸ã®1ç•ªä¸Šã«æˆ»ã‚‹</a></li>
 			<li><a href="http://hsp.tv/">Go to HSPTV page</a></li>
 		</ul>
 		<a href="http://www.onionsoft.net/">
