--- a/package/win32/index.htm
+++ b/package/win32/index.htm
@@ -1,102 +1,104 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html lang="ja">
 <head>
-	<meta http-equiv="Content-Type" content="text/html; charset=Shift_JIS">
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<meta http-equiv="Content-Language" content="ja">
 	<meta http-equiv="Content-Style-Type" content="text/css">
 	<meta http-equiv="Content-Script-Type" content="text/javascript">
-	<meta name="author" content="OpenHSP3 Projectihttp://dev.onionsoft.net/trac/wikij">
+	<meta name="author" content="OpenHSP3 Projectï¼ˆhttp://dev.onionsoft.net/trac/wikiï¼‰">
 	<meta name="keywords" content="HSP3,HotSoupProcessor3">
-	<meta name="description" content="HSP3‚ÉŠÖ‚·‚éƒhƒLƒ…ƒƒ“ƒg‚Ìˆê——">
+	<meta name="description" content="HSP3ã«é–¢ã™ã‚‹ãƒ‰ã‚­ãƒ¥ãƒ¡ãƒ³ãƒˆã®ä¸€è¦§">
 	<link href="main.css" rel="stylesheet" type="text/css" media="all">
-	<title>HSPiHot Soup Processorj ver.3</title>
+	<title>HSPï¼ˆHot Soup Processorï¼‰ ver.3</title>
 </head>
 <body>
 	<div id="CONTAINER">
-		<!-- ƒwƒbƒ_[ -->
-		<p id="COPY">HSP : Hot Soup Processor ver3.51 / onion software 1997-2019(c)</p>
-		<img src="doclib/hsp3ttl.jpg" width="640" height="200" alt="ƒ^ƒCƒgƒ‹">
-		<h1>HSPƒ}ƒjƒ…ƒAƒ‹‘‡ƒCƒ“ƒfƒbƒNƒX</h1>
+		<!-- ãƒ˜ãƒƒãƒ€ãƒ¼ -->
+		<p id="COPY">HSP : Hot Soup Processor ver3.6 / onion software 1997-2019(c)</p>
+		<img src="doclib/hsp3ttl.jpg" width="640" height="200" alt="ã‚¿ã‚¤ãƒˆãƒ«">
+		<h1>HSPãƒžãƒ‹ãƒ¥ã‚¢ãƒ«ç·åˆã‚¤ãƒ³ãƒ‡ãƒƒã‚¯ã‚¹</h1>
 		
-		<!-- –{•¶ -->
+		<!-- æœ¬æ–‡ -->
 		<ul>
-			<li><a href="doclib/hsp3.htm">HSPƒVƒXƒeƒ€ƒhƒLƒ…ƒƒ“ƒgEƒCƒ“ƒXƒg[ƒ‹ƒKƒCƒhihsp3.htmj</a></li>
-			<li><a href="doclib/update.htm">ˆÈ‘O‚Ìƒo[ƒWƒ‡ƒ“‚©‚ç‚Ì•ÏX“_iƒAƒbƒvƒf[ƒgƒKƒCƒhjiupdate.htmj</a></li>
-			<li><a href="doclib/hspprog.htm">ƒvƒƒOƒ‰ƒ~ƒ“ƒOƒ}ƒjƒ…ƒAƒ‹EŠî–{Žd—lƒKƒCƒhihspprog.htmj</a></li>
-			<li><a href="doclib/beginner/start.htm">‰SŽÒ‚Ì‚½‚ß‚ÌHSP“ü–åibeginner/start.htmj</a></li>
-			<li><a href="doclib/faq.htm">‚æ‚­‚ ‚éŽ¿–âifaq.htmj</a></li>
-			<li><a href="doclib/error.htm">ƒGƒ‰[ƒƒbƒZ[ƒWˆê——ierror.htmj</a></li>
-			<li><a href="doclib/plugin.htm">Šg’£ƒvƒ‰ƒOƒCƒ“Eƒ‚ƒWƒ…[ƒ‹ˆê——iplugin.htmj</a></li>
-			<li><a href="doclib/hspat.htm">HSPƒAƒVƒXƒ^ƒ“ƒg ƒ}ƒjƒ…ƒAƒ‹ihspat.htmj</a></li>
-			<li><a href="doclib/peas.htm">peasƒGƒfƒBƒ^ ƒ}ƒjƒ…ƒAƒ‹ipeas.htmj</a></li>
-			<li><a href="doclib/HSP Docs Library/hdl_usage.html">HDL(HSP Document Library) ‚ÌŽg‚¢•ûihdl_usage.htmlj</a></li>
-			<li><a href="doclib/hsptv.htm">HSPTVƒuƒ‰ƒEƒU ƒ}ƒjƒ…ƒAƒ‹ihsptv.htmj</a></li>
-			<li><a href="doclib/hsptv_res.htm">HSPTVƒtƒHƒ‹ƒ_‘fÞˆê——ihsptv_res.htmj</a></li>
-			<li><a href="doclib/pronama.htm">HSP3.51ƒvƒ¶‚¿‚á‚ñ‘fÞipronama.htmj</a></li>
-			<li><a href="doclib/tamane.txt">HSP3ƒIƒtƒBƒVƒƒƒ‹3D‘fÞ "Žì‰¹i‚½‚Ü‚Ëj"itamane.txtj</a></li>
-			<li><a href="http://hsp.tv/make/tamane2d.html">HSP3ƒIƒtƒBƒVƒƒƒ‹2D‘fÞ "Žì‰¹i‚½‚Ü‚Ëj"iŠO•”webƒy[ƒWj</a></li>
+			<li><a href="doclib/hsp3.htm">HSPã‚·ã‚¹ãƒ†ãƒ ãƒ‰ã‚­ãƒ¥ãƒ¡ãƒ³ãƒˆãƒ»ã‚¤ãƒ³ã‚¹ãƒˆãƒ¼ãƒ«ã‚¬ã‚¤ãƒ‰ï¼ˆhsp3.htmï¼‰</a></li>
+			<li><a href="doclib/update.htm">ä»¥å‰ã®ãƒãƒ¼ã‚¸ãƒ§ãƒ³ã‹ã‚‰ã®å¤‰æ›´ç‚¹ï¼ˆã‚¢ãƒƒãƒ—ãƒ‡ãƒ¼ãƒˆã‚¬ã‚¤ãƒ‰ï¼‰ï¼ˆupdate.htmï¼‰</a></li>
+			<li><a href="doclib/hspprog.htm">ãƒ—ãƒ­ã‚°ãƒ©ãƒŸãƒ³ã‚°ãƒžãƒ‹ãƒ¥ã‚¢ãƒ«ãƒ»åŸºæœ¬ä»•æ§˜ã‚¬ã‚¤ãƒ‰ï¼ˆhspprog.htmï¼‰</a></li>
+			<li><a href="doclib/beginner/start.htm">åˆå¿ƒè€…ã®ãŸã‚ã®HSPå…¥é–€ï¼ˆbeginner/start.htmï¼‰</a></li>
+			<li><a href="doclib/faq.htm">ã‚ˆãã‚ã‚‹è³ªå•ï¼ˆfaq.htmï¼‰</a></li>
+			<li><a href="doclib/error.htm">ã‚¨ãƒ©ãƒ¼ãƒ¡ãƒƒã‚»ãƒ¼ã‚¸ä¸€è¦§ï¼ˆerror.htmï¼‰</a></li>
+			<li><a href="doclib/plugin.htm">æ‹¡å¼µãƒ—ãƒ©ã‚°ã‚¤ãƒ³ãƒ»ãƒ¢ã‚¸ãƒ¥ãƒ¼ãƒ«ä¸€è¦§ï¼ˆplugin.htmï¼‰</a></li>
+			<li><a href="doclib/hspat.htm">HSPã‚¢ã‚·ã‚¹ã‚¿ãƒ³ãƒˆ ãƒžãƒ‹ãƒ¥ã‚¢ãƒ«ï¼ˆhspat.htmï¼‰</a></li>
+			<li><a href="doclib/peas.htm">peasã‚¨ãƒ‡ã‚£ã‚¿ ãƒžãƒ‹ãƒ¥ã‚¢ãƒ«ï¼ˆpeas.htmï¼‰</a></li>
+			<li><a href="doclib/HSP Docs Library/hdl_usage.html">HDL(HSP Document Library) ã®ä½¿ã„æ–¹ï¼ˆhdl_usage.htmlï¼‰</a></li>
+			<li><a href="doclib/hsptv.htm">HSPTVãƒ–ãƒ©ã‚¦ã‚¶ ãƒžãƒ‹ãƒ¥ã‚¢ãƒ«ï¼ˆhsptv.htmï¼‰</a></li>
+			<li><a href="doclib/hsptv_res.htm">HSPTVãƒ•ã‚©ãƒ«ãƒ€ç´ æä¸€è¦§ï¼ˆhsptv_res.htmï¼‰</a></li>
+			<li><a href="doclib/pronama.htm">ãƒ—ãƒ­ç”Ÿã¡ã‚ƒã‚“ã‚³ãƒ©ãƒœç´ æï¼ˆpronama.htmï¼‰</a></li>
+			<li><a href="doclib/tamane.txt">HSP3ã‚ªãƒ•ã‚£ã‚·ãƒ£ãƒ«3Dç´ æ "ç éŸ³ï¼ˆãŸã¾ã­ï¼‰"ï¼ˆtamane.txtï¼‰</a></li>
+			<li><a href="http://hsp.tv/make/tamane2d.html">HSP3ã‚ªãƒ•ã‚£ã‚·ãƒ£ãƒ«2Dç´ æ "ç éŸ³ï¼ˆãŸã¾ã­ï¼‰"ï¼ˆå¤–éƒ¨webãƒšãƒ¼ã‚¸ï¼‰</a></li>
 	    	        <li><a href="hsp3dish.htm">HSP3Dish</a>
 			<ul>
-				<li><a href="doclib/hsp3dish_prog.htm">ƒvƒƒOƒ‰ƒ~ƒ“ƒOƒ}ƒjƒ…ƒAƒ‹EŠî–{Žd—lƒKƒCƒhihsp3dish_prog.htmj</a></li>
-				<li><a href="doclib/hsp3dish_js.htm">WebGL/JavaScript”Å(hsp3dish.js)ƒvƒƒOƒ‰ƒ~ƒ“ƒOƒKƒCƒhihsp3dish_js.htmj</a></li>
-				<li><a href="doclib/hsp3dish_ios.htm">iOS”ÅƒvƒƒOƒ‰ƒ~ƒ“ƒOƒKƒCƒhihsp3dish_ios.htmj</a></li>
-				<li><a href="doclib/hsp3dish_ndk.htm">android(NDK)”ÅƒvƒƒOƒ‰ƒ~ƒ“ƒOƒKƒCƒhihsp3dish_ndk.htmj</a></li>
-				<li><a href="doclib/hsp3cnv.txt">HSP3ƒ\[ƒXƒRƒ“ƒo[ƒ^[Eƒ}ƒjƒ…ƒAƒ‹ihsp3cnv.txtj</a></li>
+				<li><a href="doclib/hsp3dish_prog.htm">ãƒ—ãƒ­ã‚°ãƒ©ãƒŸãƒ³ã‚°ãƒžãƒ‹ãƒ¥ã‚¢ãƒ«ãƒ»åŸºæœ¬ä»•æ§˜ã‚¬ã‚¤ãƒ‰ï¼ˆhsp3dish_prog.htmï¼‰</a></li>
+				<li><a href="doclib/hgimg4.html">HGIMG4ãƒ—ãƒ­ã‚°ãƒ©ãƒŸãƒ³ã‚°ã‚¬ã‚¤ãƒ‰ï¼ˆhgimg4.htmlï¼‰</a></li>
+				<ul>
+					<li><a href="doclib/hgimg4_unity.html">HGIMG4 Unityé€£æºã‚¬ã‚¤ãƒ‰ï¼ˆhgimg4_unity.htmlï¼‰</a></li>
+				</ul>
+				<li><a href="doclib/hsp3dish_js.htm">WebGL/JavaScriptç‰ˆ(hsp3dish.js)ãƒ—ãƒ­ã‚°ãƒ©ãƒŸãƒ³ã‚°ã‚¬ã‚¤ãƒ‰ï¼ˆhsp3dish_js.htmï¼‰</a></li>
+				<li><a href="doclib/hsp3dish_ios.htm">iOSç‰ˆãƒ—ãƒ­ã‚°ãƒ©ãƒŸãƒ³ã‚°ã‚¬ã‚¤ãƒ‰ï¼ˆhsp3dish_ios.htmï¼‰</a></li>
+				<li><a href="doclib/hsp3dish_ndk.htm">android(NDK)ç‰ˆãƒ—ãƒ­ã‚°ãƒ©ãƒŸãƒ³ã‚°ã‚¬ã‚¤ãƒ‰ï¼ˆhsp3dish_ndk.htmï¼‰</a></li>
+				<li><a href="doclib/hsp3cnv.txt">HSP3ã‚½ãƒ¼ã‚¹ã‚³ãƒ³ãƒãƒ¼ã‚¿ãƒ¼ãƒ»ãƒžãƒ‹ãƒ¥ã‚¢ãƒ«ï¼ˆhsp3cnv.txtï¼‰</a></li>
 			</ul>
 
-
 			</li>
 
-    	    <li><a href="doclib/plugin.htm">Šg’£ƒvƒ‰ƒOƒCƒ“Eƒ‚ƒWƒ…[ƒ‹</a>
+    	    <li><a href="doclib/plugin.htm">æ‹¡å¼µãƒ—ãƒ©ã‚°ã‚¤ãƒ³ãƒ»ãƒ¢ã‚¸ãƒ¥ãƒ¼ãƒ«</a>
     	    	<ul>
-					<li><a href="doclib/hsp3utf.txt">HSP3UTF ƒ}ƒjƒ…ƒAƒ‹ihsp3utf.txtj</a></li>
-					<li><a href="doclib/hspext.txt">HSPEXT.DLL ƒ}ƒjƒ…ƒAƒ‹ihspext.txtj</a></li>
-					<li><a href="doclib/hspda.txt">HSPDA.DLL ƒ}ƒjƒ…ƒAƒ‹ihspda.txtj</a></li>
-					<li><a href="doclib/hspdb.txt">HSPDB.DLL ƒ}ƒjƒ…ƒAƒ‹ihspdb.txtj</a></li>
-					<li><a href="doclib/hspcv.txt">HSPCV.DLL ƒ}ƒjƒ…ƒAƒ‹ihspcv.txtj</a></li>
-					<li><a href="doclib/hgimg3.txt">HGIMG3 ƒ}ƒjƒ…ƒAƒ‹ihgimg3.txtj</a></li>
+					<li><a href="doclib/hsp3utf.txt">HSP3UTF ãƒžãƒ‹ãƒ¥ã‚¢ãƒ«ï¼ˆhsp3utf.txtï¼‰</a></li>
+					<li><a href="doclib/hspext.txt">HSPEXT.DLL ãƒžãƒ‹ãƒ¥ã‚¢ãƒ«ï¼ˆhspext.txtï¼‰</a></li>
+					<li><a href="doclib/hspda.txt">HSPDA.DLL ãƒžãƒ‹ãƒ¥ã‚¢ãƒ«ï¼ˆhspda.txtï¼‰</a></li>
+					<li><a href="doclib/hspdb.txt">HSPDB.DLL ãƒžãƒ‹ãƒ¥ã‚¢ãƒ«ï¼ˆhspdb.txtï¼‰</a></li>
+					<li><a href="doclib/hspcv.txt">HSPCV.DLL ãƒžãƒ‹ãƒ¥ã‚¢ãƒ«ï¼ˆhspcv.txtï¼‰</a></li>
+					<li><a href="doclib/hgimg3.txt">HGIMG3 ãƒžãƒ‹ãƒ¥ã‚¢ãƒ«ï¼ˆhgimg3.txtï¼‰</a></li>
 					<ul>
-						<li><a href="doclib/elm2d_edit.txt">HGIMG3 2D Elements EditoriHGIMG3ƒ†[ƒU[Œü‚¯jielm2d_edit.txtj</a></li>
+						<li><a href="doclib/elm2d_edit.txt">HGIMG3 2D Elements Editorï¼ˆHGIMG3ãƒ¦ãƒ¼ã‚¶ãƒ¼å‘ã‘ï¼‰ï¼ˆelm2d_edit.txtï¼‰</a></li>
 					</ul>
-					<li><a href="doclib/hgimg4.txt">HGIMG4 ƒ}ƒjƒ…ƒAƒ‹ihgimg4.txtj</a></li>
-					<li><a href="doclib/hspogg.txt">HSPOGG.DLL ƒ}ƒjƒ…ƒAƒ‹ihspogg.txtj</a></li>
-					<li><a href="doclib/hspinet.txt">HSPINET.DLL ƒ}ƒjƒ…ƒAƒ‹ihspinet.txtj</a></li>
-					<li><a href="doclib/hspsock.txt">HSPSOCK.DLL ƒ}ƒjƒ…ƒAƒ‹ihspsock.txtj</a></li>
-					<li><a href="doclib/hspcmp.txt">HSPCMP.DLL ƒ}ƒjƒ…ƒAƒ‹ihspcmp.txtj</a></li>
-					<li><a href="doclib/hsp3imp.txt">HSP3IMP.DLL ƒ}ƒjƒ…ƒAƒ‹ihsp3imp.txtj</a></li>
-					<li><a href="doclib/obaq.txt">•¨—ƒGƒ“ƒWƒ“OBAQ ƒ}ƒjƒ…ƒAƒ‹iobaq.txtj</a></li>
+					<li><a href="doclib/hspogg.txt">HSPOGG.DLL ãƒžãƒ‹ãƒ¥ã‚¢ãƒ«ï¼ˆhspogg.txtï¼‰</a></li>
+					<li><a href="doclib/hspinet.txt">HSPINET.DLL ãƒžãƒ‹ãƒ¥ã‚¢ãƒ«ï¼ˆhspinet.txtï¼‰</a></li>
+					<li><a href="doclib/hspsock.txt">HSPSOCK.DLL ãƒžãƒ‹ãƒ¥ã‚¢ãƒ«ï¼ˆhspsock.txtï¼‰</a></li>
+					<li><a href="doclib/hspcmp.txt">HSPCMP.DLL ãƒžãƒ‹ãƒ¥ã‚¢ãƒ«ï¼ˆhspcmp.txtï¼‰</a></li>
+					<li><a href="doclib/hsp3imp.txt">HSP3IMP.DLL ãƒžãƒ‹ãƒ¥ã‚¢ãƒ«ï¼ˆhsp3imp.txtï¼‰</a></li>
+					<li><a href="doclib/obaq.txt">ç‰©ç†ã‚¨ãƒ³ã‚¸ãƒ³OBAQ ãƒžãƒ‹ãƒ¥ã‚¢ãƒ«ï¼ˆobaq.txtï¼‰</a></li>
 					<ul>
-						<li><a href="doclib/obaqme.txt">OBAQ Model EditoriOBAQƒ†[ƒU[Œü‚¯jiobaqme.txtj</a></li>
+						<li><a href="doclib/obaqme.txt">OBAQ Model Editorï¼ˆOBAQãƒ¦ãƒ¼ã‚¶ãƒ¼å‘ã‘ï¼‰ï¼ˆobaqme.txtï¼‰</a></li>
 					</ul>
-					<li><a href="doclib/d3module/d3module.txt">d3module ƒ}ƒjƒ…ƒAƒ‹id3module.txtj</a></li>
-					<li><a href="doclib/Artlet2D/Artlet2D.txt">Artlet2D ƒ}ƒjƒ…ƒAƒ‹iArtlet2D.txtj</a></li>
-					<li><a href="doclib/SQLele/SQLele.txt">SQLele ƒ}ƒjƒ…ƒAƒ‹iSQLele.txtj</a></li>
-					<li><a href="doclib/hspusbio/hspusbio.txt">hspusbio ƒ}ƒjƒ…ƒAƒ‹ihspusbio.txtj</a></li>
-					<li><a href="doclib/hspprint.txt">hspprint ƒ}ƒjƒ…ƒAƒ‹ihspprint.txtj</a></li>
-					<li><a href="doclib/hsp_arduino.txt">Arduino‘€ìƒ‚ƒWƒ…[ƒ‹ ƒ}ƒjƒ…ƒAƒ‹ihsp_arduino.txtj</a></li>
+					<li><a href="doclib/d3module/d3module.txt">d3module ãƒžãƒ‹ãƒ¥ã‚¢ãƒ«ï¼ˆd3module.txtï¼‰</a></li>
+					<li><a href="doclib/Artlet2D/Artlet2D.txt">Artlet2D ãƒžãƒ‹ãƒ¥ã‚¢ãƒ«ï¼ˆArtlet2D.txtï¼‰</a></li>
+					<li><a href="doclib/SQLele/SQLele.txt">SQLele ãƒžãƒ‹ãƒ¥ã‚¢ãƒ«ï¼ˆSQLele.txtï¼‰</a></li>
+					<li><a href="doclib/hspusbio/hspusbio.txt">hspusbio ãƒžãƒ‹ãƒ¥ã‚¢ãƒ«ï¼ˆhspusbio.txtï¼‰</a></li>
+					<li><a href="doclib/hspprint.txt">hspprint ãƒžãƒ‹ãƒ¥ã‚¢ãƒ«ï¼ˆhspprint.txtï¼‰</a></li>
+					<li><a href="doclib/hsp_arduino.txt">Arduinoæ“ä½œãƒ¢ã‚¸ãƒ¥ãƒ¼ãƒ« ãƒžãƒ‹ãƒ¥ã‚¢ãƒ«ï¼ˆhsp_arduino.txtï¼‰</a></li>
 				</ul>
 			</li>
-			<li><a href="doclib/hsp3str.htm">HSP3•¶Žš—ñ‚Ì‚Ð‚Ý‚Âi’†‹‰ŽÒŒü‚¯jihsp3str.htmj</a></li>
-			<li><a href="doclib/module.htm">ƒ‚ƒWƒ…[ƒ‹‹@”\ƒKƒCƒhi’†ã‹‰ŽÒŒü‚¯jimodule.htmj</a></li>
-			<li><a href="doclib/history.txt">HSP3XV—š—ðihistory.txtj</a></li>
+			<li><a href="doclib/hsp3str.htm">HSP3æ–‡å­—åˆ—ã®ã²ã¿ã¤ï¼ˆä¸­ç´šè€…å‘ã‘ï¼‰ï¼ˆhsp3str.htmï¼‰</a></li>
+			<li><a href="doclib/module.htm">ãƒ¢ã‚¸ãƒ¥ãƒ¼ãƒ«æ©Ÿèƒ½ã‚¬ã‚¤ãƒ‰ï¼ˆä¸­ä¸Šç´šè€…å‘ã‘ï¼‰ï¼ˆmodule.htmï¼‰</a></li>
+			<li><a href="doclib/history.txt">HSP3æ›´æ–°å±¥æ­´ï¼ˆhistory.txtï¼‰</a></li>
 
 			<li>HSPSDK
 				<ul>
-					<li><a href="doclib/aht.txt">AHTiAdditional HSP Template &amp; Toolsjƒ}ƒjƒ…ƒAƒ‹i’†ã‹‰ŽÒŒü‚¯jiaht.txtj</a></li>
-					<li><a href="doclib/hsptv_api.txt">HSPTV‘Î‰žƒ\ƒtƒgì¬ƒ}ƒjƒ…ƒAƒ‹i’†ã‹‰ŽÒŒü‚¯jihsptv_api.txtj</a></li>
-					<li><a href="doclib/hsptvapp.txt">HSPTV!ƒ‰ƒ“ƒLƒ“ƒO‘Î‰žƒ\ƒtƒgì¬ƒ}ƒjƒ…ƒAƒ‹i’†ã‹‰ŽÒŒü‚¯jihsptvapp.txtj</a></li>
-					<li><a href="doclib/HSP Docs Library/HS_BIBLE.txt">HSP HELP Browser—p hsƒtƒ@ƒCƒ‹‚Ì•W€Žd—liHS_BIBLE.txtj</a></li>
-					<li><a href="hspsdk/readme.txt">HSPSDK(HSPŠJ”­ƒLƒbƒg)ƒ}ƒjƒ…ƒAƒ‹iã‹‰ŽÒŒü‚¯jireadme.txtj</a></li>
-					<li><a href="hspsdk/hspdll.txt">HSPƒvƒ‰ƒOƒCƒ“ŠJ”­ƒ}ƒjƒ…ƒAƒ‹iã‹‰ŽÒŒü‚¯jihspdll.txtj</a></li>
-					<li><a href="doclib/hsp3cnv.txt">HSP3ƒ\[ƒXƒRƒ“ƒo[ƒ^[ ƒ}ƒjƒ…ƒAƒ‹iã‹‰ŽÒŒü‚¯jihsp3cnv.txtj</a></li>
+					<li><a href="doclib/aht.txt">AHTï¼ˆAdditional HSP Template &amp; Toolsï¼‰ãƒžãƒ‹ãƒ¥ã‚¢ãƒ«ï¼ˆä¸­ä¸Šç´šè€…å‘ã‘ï¼‰ï¼ˆaht.txtï¼‰</a></li>
+					<li><a href="doclib/hsptv_api.txt">HSPTVå¯¾å¿œã‚½ãƒ•ãƒˆä½œæˆãƒžãƒ‹ãƒ¥ã‚¢ãƒ«ï¼ˆä¸­ä¸Šç´šè€…å‘ã‘ï¼‰ï¼ˆhsptv_api.txtï¼‰</a></li>
+					<li><a href="doclib/hsptvapp.txt">HSPTV!ãƒ©ãƒ³ã‚­ãƒ³ã‚°å¯¾å¿œã‚½ãƒ•ãƒˆä½œæˆãƒžãƒ‹ãƒ¥ã‚¢ãƒ«ï¼ˆä¸­ä¸Šç´šè€…å‘ã‘ï¼‰ï¼ˆhsptvapp.txtï¼‰</a></li>
+					<li><a href="doclib/HSP Docs Library/HS_BIBLE.txt">HSP HELP Browserç”¨ hsãƒ•ã‚¡ã‚¤ãƒ«ã®æ¨™æº–ä»•æ§˜ï¼ˆHS_BIBLE.txtï¼‰</a></li>
+					<li><a href="hspsdk/readme.txt">HSPSDK(HSPé–‹ç™ºã‚­ãƒƒãƒˆ)ãƒžãƒ‹ãƒ¥ã‚¢ãƒ«ï¼ˆä¸Šç´šè€…å‘ã‘ï¼‰ï¼ˆreadme.txtï¼‰</a></li>
+					<li><a href="hspsdk/hspdll.txt">HSPãƒ—ãƒ©ã‚°ã‚¤ãƒ³é–‹ç™ºãƒžãƒ‹ãƒ¥ã‚¢ãƒ«ï¼ˆä¸Šç´šè€…å‘ã‘ï¼‰ï¼ˆhspdll.txtï¼‰</a></li>
+					<li><a href="doclib/hsp3cnv.txt">HSP3ã‚½ãƒ¼ã‚¹ã‚³ãƒ³ãƒãƒ¼ã‚¿ãƒ¼ ãƒžãƒ‹ãƒ¥ã‚¢ãƒ«ï¼ˆä¸Šç´šè€…å‘ã‘ï¼‰ï¼ˆhsp3cnv.txtï¼‰</a></li>
 				</ul>
 			</li>
 
 		</ul>
 
-		<!-- ƒtƒbƒ^[ -->
+		<!-- ãƒ•ãƒƒã‚¿ãƒ¼ -->
 		<ul id="FOOTER">
-			<li><a href="#CONTAINER">‚±‚Ìƒy[ƒW‚Ì1”Ôã‚É–ß‚é</a></li>
+			<li><a href="#CONTAINER">ã“ã®ãƒšãƒ¼ã‚¸ã®1ç•ªä¸Šã«æˆ»ã‚‹</a></li>
 			<li><a href="http://hsp.tv/">Go to HSPTV page</a></li>
 		</ul>
 		<a href="http://www.onionsoft.net/hsp/">
@@ -106,54 +108,54 @@
 </body>
 
 <!--
-	HTML‹Lqã‚Ì–ÚˆÀiˆêˆÄj
+	HTMLè¨˜è¿°ä¸Šã®ç›®å®‰ï¼ˆä¸€æ¡ˆï¼‰
 
-	[‹Lqã‚Ì§ŒÀ]
-	E•¶ŽšƒR[ƒh‚ÍƒVƒtƒgJISŒÀ’èB
-	E•¶‘Œ^‚ÍHDL‚Æ“¯‚¶HTML 4.01 TransitionalB
-	EuHDL Œü‚¯ƒhƒLƒ…ƒƒ“ƒg‚Ì‘‚«•ûv‚É]‚¤B
-	EI—¹ƒ^ƒO‚ÍÈ—ª‚µ‚È‚¢B
-	Ecss‚Ímain.css‚ðŠî–{‚Æ‚·‚éB•K—v‚É‰ž‚¶‚Ästyle—v‘f‚¨‚æ‚Ñstyle‘®«‚ð—˜—p‚µ‚Ä‚à—Ç‚¢‚ªA‹É—Í”ð‚¯‚éB
-	Eid‚Í‘SŠp‰pŽšB
+	[è¨˜è¿°ä¸Šã®åˆ¶é™]
+	ãƒ»æ–‡å­—ã‚³ãƒ¼ãƒ‰ã¯ã‚·ãƒ•ãƒˆJISé™å®šã€‚
+	ãƒ»æ–‡æ›¸åž‹ã¯HDLã¨åŒã˜HTML 4.01 Transitionalã€‚
+	ãƒ»ã€ŒHDL å‘ã‘ãƒ‰ã‚­ãƒ¥ãƒ¡ãƒ³ãƒˆã®æ›¸ãæ–¹ã€ã«å¾“ã†ã€‚
+	ãƒ»çµ‚äº†ã‚¿ã‚°ã¯çœç•¥ã—ãªã„ã€‚
+	ãƒ»cssã¯main.cssã‚’åŸºæœ¬ã¨ã™ã‚‹ã€‚å¿…è¦ã«å¿œã˜ã¦styleè¦ç´ ãŠã‚ˆã³styleå±žæ€§ã‚’åˆ©ç”¨ã—ã¦ã‚‚è‰¯ã„ãŒã€æ¥µåŠ›é¿ã‘ã‚‹ã€‚
+	ãƒ»idã¯å…¨è§’è‹±å­—ã€‚
 
-	[head—v‘f“à]
-	E•¶ŽšƒR[ƒh‚ÌéŒ¾‚Í‘SŠp•¶Žš‚ª‹Lq‚³‚ê‚é‘O‚É•K‚¸s‚¤B
-	Ekeywords,description‚Í‚Å‚«‚é‚¾‚¯‹Lq‚·‚éB
-	Eauthor‚Í"OpenHSP3 Projectihttp://dev.onionsoft.net/trac/wikij"‚Æ‚·‚éB
-	Eƒ^ƒCƒgƒ‹‚Í“à—e‚ð’[“I‚É•\‚·‚à‚Ì‚É‚·‚é‚æ‚¤S‚ª‚¯‚éB
+	[headè¦ç´ å†…]
+	ãƒ»æ–‡å­—ã‚³ãƒ¼ãƒ‰ã®å®£è¨€ã¯å…¨è§’æ–‡å­—ãŒè¨˜è¿°ã•ã‚Œã‚‹å‰ã«å¿…ãšè¡Œã†ã€‚
+	ãƒ»keywords,descriptionã¯ã§ãã‚‹ã ã‘è¨˜è¿°ã™ã‚‹ã€‚
+	ãƒ»authorã¯"OpenHSP3 Projectï¼ˆhttp://dev.onionsoft.net/trac/wikiï¼‰"ã¨ã™ã‚‹ã€‚
+	ãƒ»ã‚¿ã‚¤ãƒˆãƒ«ã¯å†…å®¹ã‚’ç«¯çš„ã«è¡¨ã™ã‚‚ã®ã«ã™ã‚‹ã‚ˆã†å¿ƒãŒã‘ã‚‹ã€‚
 
-	[body—v‘f“à]
-	Eƒy[ƒW‚Ì‘S—v‘f‚Íid‚ª"CONTAINER"‚Å‚ ‚édivƒ^ƒO‚ÅˆÍ‚ÞB
-	@uƒy[ƒW‚Ì1”Ôã‚É–ß‚évƒŠƒ“ƒN‚Å‚Í‚±‚Ìid‚ðŽg‚¤B
-	EŒ©o‚µ‚Íh1`h4ƒ^ƒO‚ðŽg‚¤B
-		h1Ftitle“¯—lA•¶‘‚Ì“à—e‚ð•\‚·Bid‚Í‚Â‚¯‚È‚¢B
-		h2FÍB1Í‚¾‚¯‚Å\¬‚³‚ê‚é•¶‘‚Ìê‡‚Íß‚Æ‚µ‚Ä—Ç‚¢B
-		h3FßB
-		h4F‚³‚ç‚É×•ª‰»‚·‚éÛ‚ÉŽg—pB
-	EˆÈ‰º‚Ì—v‘f‚Í‚Å‚«‚é‚¾‚¯Žg‚í‚È‚¢iƒfƒUƒCƒ“‚Æ•¶‘\‘¢‚Ì•ª—£‚Ì‚½‚ßjB
-		Efont
-		Ecenter
-		Eb, i, u, s
-	EˆÈ‰º‚Ì‘®«‚Í•K‚¸Žw’è‚·‚éB
-		Eimg—v‘f‚Ìalt,width,height‘®«
-	EˆÈ‰º‚Ì‘®«‚Í‹É—ÍŽg—p‚µ‚È‚¢B
-		Ea—v‘f‚Ìtarget‘®«
-		Eimg—v‘f‚Ìborder‘®«
-	E•¶‚Ì‹­’²‚Íemƒ^ƒOiƒCƒ“ƒ‰ƒCƒ“—v‘fjB
-	EƒL[ƒ{[ƒh‚É‚æ‚é“ü—Í‚Íkbdƒ^ƒOiƒCƒ“ƒ‰ƒCƒ“—v‘fjB
-	Eo—Í—á‚Ísampƒ^ƒOiƒCƒ“ƒ‰ƒCƒ“—v‘fjB
-	E1s‚ÌƒXƒNƒŠƒvƒg—á‚Ícodeƒ^ƒOiƒCƒ“ƒ‰ƒCƒ“—v‘fjB
-	E•¡”s‚É‚í‚½‚éƒTƒ“ƒvƒ‹ƒXƒNƒŠƒvƒg‚Ípreƒ^ƒOiƒuƒƒbƒN—v‘fjB
-	E3Ží‚ÌƒŠƒXƒg‘‚«iol,ul,dlj‚ð—LŒø‚É—˜—p‚·‚é‚±‚ÆB
+	[bodyè¦ç´ å†…]
+	ãƒ»ãƒšãƒ¼ã‚¸ã®å…¨è¦ç´ ã¯idãŒ"CONTAINER"ã§ã‚ã‚‹divã‚¿ã‚°ã§å›²ã‚€ã€‚
+	ã€€ã€Œãƒšãƒ¼ã‚¸ã®1ç•ªä¸Šã«æˆ»ã‚‹ã€ãƒªãƒ³ã‚¯ã§ã¯ã“ã®idã‚’ä½¿ã†ã€‚
+	ãƒ»è¦‹å‡ºã—ã¯h1ï½žh4ã‚¿ã‚°ã‚’ä½¿ã†ã€‚
+		h1ï¼štitleåŒæ§˜ã€æ–‡æ›¸ã®å†…å®¹ã‚’è¡¨ã™ã€‚idã¯ã¤ã‘ãªã„ã€‚
+		h2ï¼šç« ã€‚1ç« ã ã‘ã§æ§‹æˆã•ã‚Œã‚‹æ–‡æ›¸ã®å ´åˆã¯ç¯€ã¨ã—ã¦è‰¯ã„ã€‚
+		h3ï¼šç¯€ã€‚
+		h4ï¼šã•ã‚‰ã«ç´°åˆ†åŒ–ã™ã‚‹éš›ã«ä½¿ç”¨ã€‚
+	ãƒ»ä»¥ä¸‹ã®è¦ç´ ã¯ã§ãã‚‹ã ã‘ä½¿ã‚ãªã„ï¼ˆãƒ‡ã‚¶ã‚¤ãƒ³ã¨æ–‡æ›¸æ§‹é€ ã®åˆ†é›¢ã®ãŸã‚ï¼‰ã€‚
+		ãƒ»font
+		ãƒ»center
+		ãƒ»b, i, u, s
+	ãƒ»ä»¥ä¸‹ã®å±žæ€§ã¯å¿…ãšæŒ‡å®šã™ã‚‹ã€‚
+		ãƒ»imgè¦ç´ ã®alt,width,heightå±žæ€§
+	ãƒ»ä»¥ä¸‹ã®å±žæ€§ã¯æ¥µåŠ›ä½¿ç”¨ã—ãªã„ã€‚
+		ãƒ»aè¦ç´ ã®targetå±žæ€§
+		ãƒ»imgè¦ç´ ã®borderå±žæ€§
+	ãƒ»æ–‡ã®å¼·èª¿ã¯emã‚¿ã‚°ï¼ˆã‚¤ãƒ³ãƒ©ã‚¤ãƒ³è¦ç´ ï¼‰ã€‚
+	ãƒ»ã‚­ãƒ¼ãƒœãƒ¼ãƒ‰ã«ã‚ˆã‚‹å…¥åŠ›ã¯kbdã‚¿ã‚°ï¼ˆã‚¤ãƒ³ãƒ©ã‚¤ãƒ³è¦ç´ ï¼‰ã€‚
+	ãƒ»å‡ºåŠ›ä¾‹ã¯sampã‚¿ã‚°ï¼ˆã‚¤ãƒ³ãƒ©ã‚¤ãƒ³è¦ç´ ï¼‰ã€‚
+	ãƒ»1è¡Œã®ã‚¹ã‚¯ãƒªãƒ—ãƒˆä¾‹ã¯codeã‚¿ã‚°ï¼ˆã‚¤ãƒ³ãƒ©ã‚¤ãƒ³è¦ç´ ï¼‰ã€‚
+	ãƒ»è¤‡æ•°è¡Œã«ã‚ãŸã‚‹ã‚µãƒ³ãƒ—ãƒ«ã‚¹ã‚¯ãƒªãƒ—ãƒˆã¯preã‚¿ã‚°ï¼ˆãƒ–ãƒ­ãƒƒã‚¯è¦ç´ ï¼‰ã€‚
+	ãƒ»3ç¨®ã®ãƒªã‚¹ãƒˆæ›¸ãï¼ˆol,ul,dlï¼‰ã‚’æœ‰åŠ¹ã«åˆ©ç”¨ã™ã‚‹ã“ã¨ã€‚
 
-	[body—v‘f“à/ƒe[ƒuƒ‹]
-	Etable“à‚Écaption—v‘f‚ð‘‚­‚æ‚¤‚ÉS‚ª‚¯‚éB
-	EŒ©o‚µƒZƒ‹‚Íth—v‘fA‚»‚êˆÈŠO‚ÌƒZƒ‹‚Ítd—v‘fB
+	[bodyè¦ç´ å†…/ãƒ†ãƒ¼ãƒ–ãƒ«]
+	ãƒ»tableå†…ã«captionè¦ç´ ã‚’æ›¸ãã‚ˆã†ã«å¿ƒãŒã‘ã‚‹ã€‚
+	ãƒ»è¦‹å‡ºã—ã‚»ãƒ«ã¯thè¦ç´ ã€ãã‚Œä»¥å¤–ã®ã‚»ãƒ«ã¯tdè¦ç´ ã€‚
 	
-	[body—v‘f“à/ƒtƒbƒ^[]
-	EŠî–{“I‚ÉuHSPTV‚Ö‚ÌƒŠƒ“ƒNvuƒy[ƒW‚Ìˆê”Ôã‚Ö‚ÌƒŠƒ“ƒNv‚¨‚æ‚Ñ
-	@uƒhƒLƒ…ƒƒ“ƒgˆê——i‚±‚Ìƒtƒ@ƒCƒ‹j‚Ö‚ÌƒŠƒ“ƒNv‚ð‹Lq‚·‚éB
-	EƒŠƒ“ƒN‚Ì‹Lq‚Íul‚É‚æ‚é‡˜‚È‚µƒŠƒXƒg‚ð—p‚¢‚éB
-	Eƒy[ƒW‰E‰º‚É•\Ž¦‚·‚éƒoƒi[‚Ìƒ^ƒOiid="ONIBTN"j‚Í‚±‚±‚É‹Lq‚·‚éB
+	[bodyè¦ç´ å†…/ãƒ•ãƒƒã‚¿ãƒ¼]
+	ãƒ»åŸºæœ¬çš„ã«ã€ŒHSPTVã¸ã®ãƒªãƒ³ã‚¯ã€ã€Œãƒšãƒ¼ã‚¸ã®ä¸€ç•ªä¸Šã¸ã®ãƒªãƒ³ã‚¯ã€ãŠã‚ˆã³
+	ã€€ã€Œãƒ‰ã‚­ãƒ¥ãƒ¡ãƒ³ãƒˆä¸€è¦§ï¼ˆã“ã®ãƒ•ã‚¡ã‚¤ãƒ«ï¼‰ã¸ã®ãƒªãƒ³ã‚¯ã€ã‚’è¨˜è¿°ã™ã‚‹ã€‚
+	ãƒ»ãƒªãƒ³ã‚¯ã®è¨˜è¿°ã¯ulã«ã‚ˆã‚‹é †åºãªã—ãƒªã‚¹ãƒˆã‚’ç”¨ã„ã‚‹ã€‚
+	ãƒ»ãƒšãƒ¼ã‚¸å³ä¸‹ã«è¡¨ç¤ºã™ã‚‹ãƒãƒŠãƒ¼ã®ã‚¿ã‚°ï¼ˆid="ONIBTN"ï¼‰ã¯ã“ã“ã«è¨˜è¿°ã™ã‚‹ã€‚
  -->
 </html>
