--- a/package/win32/doclib/hsp3dish_ndk.htm
+++ b/package/win32/doclib/hsp3dish_ndk.htm
@@ -246,7 +246,8 @@
 	フォルダに「hsp3dish.ini」ファイルが存在する場合は、画面サイズやスケーリングなどの設定が反映されます。詳しくは、「hsp3dish.ini設定ファイルについて」の項を参照してください。
 	</p>
 	<li>データファイル(dpm)</li><br><p>
-	スクリプトから参照されるデータが格納されているdpmファイルを指定します。dpmファイルは、HSPで使用している形式で、複数のファイルが1つのdpmファイルにパックされています。(「作成...」ボタンを押すことで、指定したフォルダ内にあるすべてのファイルをdata.dpmというファイルにパックして、そのファイルを指定することができます。)
+	スクリプトから参照されるデータが格納されているdpmファイルを指定します。dpmファイルは、HSPで使用している形式で、複数のファイルが1つのdpmファイルにパックされています。(「作成...」ボタンを押すことで、指定したフォルダ内にあるすべてのファイルをdata.dpmというファイルにパックして、そのファイルを指定することができます。)<br>
+	<b>※android9以降のOSで、dpmファイルが正しく認識されない不具合が確認されています。今後のバージョンで対応する予定ですが、現状ではdpmファイルを使用せず、assetsフォルダを使用することを推奨しています。<br></b>
 	データファイルの指定が空欄の場合は、dpmファイルの参照はされません。
 	詳しくは、<a href="#DATAFILE">データファイルの準備</a>を参照してください。
 	</p>
@@ -302,7 +303,10 @@
 	assetsフォルダには、画像ファイルを始めとして読み込みに使用するファイルをすべて入れておくことができます。<br>
 	ただし、Windowsとは異なりファイル名の大文字・小文字が区別されますので正しくファイル名を記述する必要がありますのでご注意ください。
 <br><br>
-	もう1つの方法は、「データファイル(dpm)」の項目で設定されているデータフォルダ(data.dpmを生成します)にファイルをコピーして使用する方法です。
+	もう1つの方法は、「データファイル(dpm)」の項目で設定されているデータフォルダ(data.dpmを生成します)にファイルをコピーして使用する方法です。<br>
+
+	<b>※android9以降のOSで、dpmファイルが正しく認識されない不具合が確認されています。今後のバージョンで対応する予定ですが、現状ではdpmファイルを使用せず、assetsフォルダを使用することを推奨しています。<br></b>
+
 	人に見られたくないデータや暗号化を使用したい人は、data.dpmのデータフォルダを使用するようにしてください。
 	ただし、サウンドファイル(wav,mp3など)は認識されないので注意してください。
 	また、data.dpmによるファイルパックからの読み出しには、HSPのpackfile仕様と同様の制限(ファイル名の長さ12文字以内)がありますので注意してください。
@@ -427,8 +431,12 @@
 	HSP3Dish Helperからリリースビルドを行なうと、署名入りのapkファイルを生成することができます。これにより、Google Play(Android マーケット)に作成したアプリを登録することが可能になります。
 	公開するための、おおまかな手順は以下の通りです。
 	</p>
+	<p><b>
+	※2019/08/01以降、Google Playに登録するアプリは、SDKにAPI28(android9)が必須になります。
+	リリースビルドするアプリは、API28以降のSDKをインストールしてビルドする必要がありますのでご注意ください。</b>
+	</p>
 	<ul>
-	<li>Googleに開発者登録を行なう(アプリを配布するためには、有償($25)の登録が必要になります)</li>
+	<li>Googleに開発者登録を行なう(アプリを配布するためには、有償の登録が必要になります)</li>
 	<li>署名のための証明書(keystore)を作成する</li>
 	<li>HSP3Dish Helperでリリースビルドを行なう</li>
 	<li>Android Developer Consoleからアップロードする</li>
