--- a/package/win32/doclib/hgimg4.html
+++ b/package/win32/doclib/hgimg4.html
@@ -276,6 +276,9 @@
 	addpos id,x,y,z					ノード座標を加算
 	getposi id,x,y,z				ノード座標を取得(整数値)
 
+	getquat id,x,y,z				ノード回転を取得(クォータニオン)
+	getang id,x,y,z					ノード回転を取得
+	getangr id,x,y,z				ノード回転を取得(整数値)
 	setang id,x,y,z					ノード回転を設定
 	setangr id,x,y,z				ノード回転を設定(整数値)
 	addang id,x,y,z					ノード回転を加算
@@ -439,6 +442,26 @@
 	それぞれのグループ値は、1,2,4,8,16,32,64,128,256,512,1024,2048,4096,8192,16384,32768の中から
 	任意のビットを組み合わせて指定可能です。
 	</p></ul>
+
+	<ul><li>
+	getang、getangr命令の追加
+	</li><br><p>
+	オブジェクトの回転情報を取得するためのgetang、getangr命令が追加されています。
+	HGIMG4の内部では、クォータニオン形式により回転情報を管理しているため、X,Y,Z回転角度に変換した値となります。
+	また、回転角度を指定するsetang、event_ang、event_setangの命令それぞれに回転順番が異なる命令を用意しています。
+</p><pre>
+		setang (X->Y->Zの順番による回転角度の設定)
+		setangy (Y->X->Zの順番による回転角度の設定)
+		setangz (Z->Y->Xの順番による回転角度の設定)
+		event_ang (X->Y->Zの順番による回転角度のイベント変化)
+		event_angy (Y->X->Zの順番による回転角度のイベント変化)
+		event_angz (Z->Y->Xの順番による回転角度のイベント変化)
+		event_setang (X->Y->Zの順番による回転角度のイベント設定)
+		event_setangy (Y->X->Zの順番による回転角度のイベント設定)
+		event_setangz (Z->Y->Xの順番による回転角度のイベント設定)
+</pre><p>
+	</p></ul>
+
 
 	<h2 id="DIFF_HGIMG3">HGIMG3との違い</h2>
 
@@ -660,11 +683,21 @@
 	<p>
 	最後に「i」が付加された命令は、整数値で変数に代入されます。
 	座標を整数のみで扱う場合や、高速化を行ないたい場合に使用する
-	ことができます。<br>
-	回転の情報取得には注意が必要です。3Dノードオブジェクトは、内部的な
-	回転情報をクォータニオン形式を保持しており、正確なX,Y,Zの回転角度を
-	求めることが困難です。このため、setangやaddang命令など回転の設定では、
-	X,Y,Z角度を指定することができましたが、取得に関してはサポートしていません。
+	ことができます。
+	</p>
+	<ul><ul><ul><p>
+		getquat id,x,y,z	ノード回転を取得(クォータニオン)<br>
+		getang id,x,y,z		ノード回転を取得<br>
+		getangr id,x,y,z	ノード回転を取得(整数値)<br>
+	</p></ul></ul></ul>
+	<p>
+	これらの命令では、回転情報を取得します。
+	x,y,zに読み出し先の変数名を指定します。<br>
+	回転の情報取得には注意が必要です。3Dノードオブジェクトでは、内部的な
+	回転情報をクォータニオン形式を保持しており、完全なX,Y,Zの回転角度を
+	求めることが困難です。このため、setang命令で指定したX,Y,Z角度と異なる
+	値が取得される可能性があります。あくまでも、近い姿勢を再現するために
+	変換された値であることに注意をしてください。
 	</p>
 
 
@@ -1159,7 +1192,9 @@
 		<img src="image/hgimg4_unity.jpg">
 		</p>
 		<p>
-	現在、fbxの出力とgpbの変換を確認しているツールは、Blender,Maya,Unityになります。
+	現在、fbxの出力とgpbの変換を確認しているツールは、Blender,Maya,Unityになります。<br>
+	gpbconv.exe、gameplay-encoder.exeはHSPフルセットに同梱されている最新版をご使用ください。
+	コンバーターとHSPランタイムのバージョンが異なっている場合、正しく表示されない場合があります。
 	</p>
 
 
